codebird-cors-proxy - changelog
===============================

1.1.0 (not yet released)

1.0.0 (2013-04-26)
+ Initial release