@@ -2,6 +2,7 @@ codebird-cors-proxy - changelog
 ===============================
 
 1.1.0 (not yet released)
++ Support base64-encoded media uploads
 
 1.0.0 (2013-04-26)
 + Initial release
